# zjctl

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPING.md  LICENSE  README.md  RELEASING.md  dist-workspace.toml  renovate.json
.claude-plugin/: marketplace.json
.github/workflows/: build.yml  claude-code-review.yml  claude.yml  release.yml  update-lockfile.yml
docs/: RELEASE-PREFLIGHT.md
docs/plans/: 2026-04-24-zjctl-design.md  2026-04-24-zjctl-implementation-plan.md
scripts/zjctl/: zjctl
scripts/zjctl-rs/: Cargo.toml
scripts/zjctl-rs/.claude-plugin/: plugin.json
scripts/zjctl-rs/src/: identity.rs  lib.rs  main.rs  output.rs  safety.rs
scripts/zjctl-rs/src/commands/: mod.rs  panes.rs  sessions.rs  tabs.rs
scripts/zjctl-rs/tests/: test_cli_integration.rs  test_panes.rs  test_safety.rs  test_sessions.rs  test_tabs.rs
scripts/zjctl-rs/tests/common/: mod.rs
scripts/zjctl/lib/: error.sh  identity.sh  output.sh  safety.sh
scripts/zjctl/tests/: harness.sh  test_error.sh  test_identity.sh  test_panes.sh  test_safety.sh  test_sessions.sh  test_tabs.sh
skills/zjctl/: README.md  SKILL.md
src/: cli.rs  error.rs  main.rs  models.rs  output.rs  zellij.rs
src/commands/: panes.rs  sessions.rs  tabs.rs
tests/: readme_docs.rs  skill_docs.rs  test_errors.rs  test_identity.rs  test_panes.rs  test_safety.rs  test_tabs.rs
